<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewEvents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#f1fcfc">

    <LinearLayout
        android:id="@+id/llBlood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Section Title -->
        <TextView
            android:id="@+id/tvBloodLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/Blood_Label"
            android:textAlignment="center"
            android:textColor="#1DA1F2"
            android:textSize="14pt"
            android:textStyle="bold" />

        <!-- General Blood Info -->
        <TextView
            android:id="@+id/tvBloodInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Blood_Info"
            android:textAlignment="center"
            android:textColor="#7F7F7F"
            android:textSize="6.5pt" />

        <!-- Blood Details (Anaemia, Platelets, etc.) -->
        <TextView
            android:id="@+id/tvBloodInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Blood_Info2"
            android:textAlignment="center"
            android:textColor="#7F7F7F"
            android:textSize="6pt" />

        <!-- Anaemia Causes -->
        <TextView
            android:id="@+id/tvBloodInfo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="12dp"
            android:text="@string/Blood_Info3"
            android:textAlignment="center"
            android:textColor="#7F7F7F"
            android:textSize="6pt" />

        <!-- Image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:src="@drawable/symptoms" />

        <!-- Back Button -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:backgroundTint="#439A39"
            android:text="Back"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>
